# PyGSC

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: parse-bo3docs.cjs
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ApiReferencePage.tsx  Editor.tsx  KeyboardShortcuts.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
src/components/editor/: autocomplete.ts  editor-themes.ts  gsc-language.ts  hover.ts  pygsc-language.ts  register-languages.ts
src/data/: bo3-api.json  pygsc-api.json  usings.json
src/lib/: language-service.ts  settings.ts  themes.ts  transpiler.ts
src/lib/transpiler/: brackets.ts  constants.ts  forward.ts  indentation.ts  index.ts  lint-gsc.ts  lint.ts  reverse.ts  state.ts  strings.ts  sugar.ts  types.ts  utils.ts
